cluster-metal/immich/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    name: immich
